update - fix mobile - fix center text align

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-	font-family: "consolas", sans-serif;
+	font-family: "consolas", monospace;
 	display: grid;
 	grid-template-rows: 57px fit-content fit-content fit-content(100vh) 57px;
 }
@@ -122,7 +122,7 @@ header ul li a {
   }
 }
 
-@media(max-width: 768px){
+@media(max-width: 862px){
 	.hero{
 		display: grid;
   }
@@ -142,13 +142,22 @@ header ul li a {
 
   header{
     display: grid;
-    grid-template-rows: fit-content(57px) repeat(2, 23px);
-    grid-template-columns: 50% 50%;
+    grid-template-rows: fit-content(57px) fit-content;
+    grid-template-columns: 100%;
     width: 100vw;
 
   }
 
-  header ul li a {
+  nav ul {
+    display: grid;
+    width: 100vw;
+    grid-template-rows: repeat(2, 23px);
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    padding: 0;
+  }
+
+  nav ul li a {
     text-decoration: none;
     padding: .85em;
     font-size: 1em;
@@ -363,15 +372,15 @@ header ul li a {
 }
 
 .direction-l .flag {
-  -webkit-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: -1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+  -webkit-box-shadow: -1px 1px 1px rgba(254,254,254,0.15), 0 0 1px rgba(254,254,254,0.15);
+  -moz-box-shadow: -1px 1px 1px rgba(254,254,254,0.15), 0 0 1px rgba(254,254,254,0.15);
+  box-shadow: -1px 1px 1px rgba(254,254,254,0.15), 0 0 1px rgba(254,254,254,0.15);
 }
 
 .direction-r .flag {
-  -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 1px 1px 1px rgba(254,254,254,0.15), 0 0 1px rgba(254,254,254,0.15);
+  -moz-box-shadow: 1px 1px 1px rgba(254,254,254,.15), 0 0 1px rgba(254,254,254,0.15);
+  box-shadow: 1px 1px 1px rgba(254,254,254,0.15), 0 0 1px rgba(254,254,254,0.15);
 }
 
 .time-wrapper {
@@ -408,6 +417,7 @@ header ul li a {
   box-shadow: 0 0 1px rgba(0,0,0,0.20);
   z-index: 15;
   border-radius: 5px;
+  text-align: left;
 }
 
 .desc ul li{
@@ -434,7 +444,7 @@ header ul li a {
 
 @media(min-width: 768px){
   .timeline {
-    width: 660px;
+    width: 860px;
     margin: 0 auto;
     margin-top: 20px;
   }
@@ -460,14 +470,14 @@ header ul li a {
 
   .direction-l {
     position: relative;
-    width: 310px;
+    width: 410px;
     float: left;
     text-align: right;
   }
 
   .direction-r {
     position: relative;
-    width: 310px;
+    width: 410px;
     float: right;
     text-align: left;
   }
@@ -529,21 +539,21 @@ header ul li a {
 
 @media(min-width: 992px){
   .timeline {
-    width: 800px;
+    width: 1010px;
     margin: 0 auto;
     margin-top: 20px;
   }
 
   .direction-l {
     position: relative;
-    width: 380px;
+    width: 470px;
     float: left;
     text-align: left;
   }
 
   .direction-r {
     position: relative;
-    width: 380px;
+    width: 470px;
     float: right;
     text-align: left;
   }
